--- a/style.css
+++ b/style.css
@@ -1,5 +1,5 @@
 body{
-    margin: 0;
+    margin: 10;
     padding: 0;
     display: flex;
     justify-content: center;
@@ -8,6 +8,7 @@ body{
     background: #031321;
     font-family: consolas;
 }
+
 
 a{
     position: relative;
@@ -20,6 +21,7 @@ a{
     font-size: 24px;
     overflow: hidden;
     transition: 0.2s;
+    margin: 5px;
 
 }
 
