--- a/style.css
+++ b/style.css
@@ -1,20 +1,33 @@
 body{
-    margin: 10;
+    margin: 0;
     padding: 0;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    min-height: 100vh;
     background: #031321;
     font-family: consolas;
 }
 
+.title{
+    font-size: 36px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    color: #ffffff;
+    min-height: 25vh;
+    text-transform: uppercase;
+    
+}
+/* Animated Button Styling */
+.Buttons{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    min-height: 75vh;
+}
 
-a{
+.Buttons a{
     position: relative;
     display: inline-block;
     padding: 15px 30px;
-    color: #2196f3;
+    color: #f32121;
     text-transform: uppercase;
     letter-spacing: 4px;
     text-decoration: none;
@@ -25,67 +38,67 @@ a{
 
 }
 
-a:hover{
-    color: #255784;
-    background: #2196f3;
-    box-shadow: 0 0 10px #2196f3, 0 0 40px #2196f3, 0 0 80px #2196f3;
+.Buttons a:hover{
+    color: #842525;
+    background: #f32121;
+    box-shadow: 0 0 10px #f32121, 0 0 40px #f32121, 0 0 80px #f32121;
     transition-delay: 1s;
 }
 
-a span{
+.Buttons a span{
     position: absolute;
     display: block;
 }
-a span:nth-child(1){
+.Buttons a span:nth-child(1){
     top: 0;
     left: -100%;
     width: 100%;
     height: 2px;
-    background: linear-gradient(90deg,transparent, #2196f3);
+    background: linear-gradient(90deg,transparent, #f32121);
 }
 
-a:hover span:nth-child(1){
+.Buttons a:hover span:nth-child(1){
     left: 100%;
     transition: 1s;
 }
 
-a span:nth-child(3){
+.Buttons a span:nth-child(3){
     bottom: 0;
     right: -100%;
     width: 100%;
     height: 2px;
-    background: linear-gradient(270deg,transparent, #2196f3);
+    background: linear-gradient(270deg,transparent, #f32121);
 }
 
-a:hover span:nth-child(3){
+.Buttons a:hover span:nth-child(3){
     right: 100%;
     transition: 1s;
     transition-delay: 0.5s;
 }
 
-a span:nth-child(2){
+.Buttons a span:nth-child(2){
     top: -100%;
     right: 0;
     width: 2px;
     height: 100%;
-    background: linear-gradient(180deg,transparent, #2196f3);
+    background: linear-gradient(180deg,transparent, #f32121);
 }
 
-a:hover span:nth-child(2){
+.Buttons a:hover span:nth-child(2){
     top: 100%;
     transition: 1s;
     transition-delay: .25s;
 }
 
-a span:nth-child(4){
+.Buttons a span:nth-child(4){
     bottom: -100%;
     left: 0;
     width: 2px;
     height: 100%;
-    background: linear-gradient(360deg,transparent, #2196f3);
+    background: linear-gradient(360deg,transparent, #f32121);
 }
 
-a:hover span:nth-child(4){
+.Buttons a:hover span:nth-child(4){
     bottom: 100%;
     transition: 1s;
     transition-delay: .75s;
