made it a f*cking clock

--- a/style.css
+++ b/style.css
@@ -1,107 +1,63 @@
-body{
+*{
     margin: 0;
     padding: 0;
-    background: #031321;
-    font-family: consolas;
-}
-
-.title{
-    font-size: 36px;
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    color: #ffffff;
-    min-height: 25vh;
-    text-transform: uppercase;
-    
-}
-/* Animated Button Styling */
-.Buttons{
+  }
+  
+  body{
+    height: 100vh;
     display: flex;
     justify-content: center;
     align-items: center;
-    min-height: 75vh;
-}
-
-.Buttons a{
+    background: #10101E;
+  }
+  
+  .datetime{
+    color: #fff;
+    background: #10101E;
+    font-family: "Segoe UI", sans-serif;
+    width: 340px;
+    padding: 15px 10px;
+    border: 3px solid #2E94E3;
+    border-radius: 5px;
+    -webkit-box-reflect: below 1px linear-gradient(transparent, rgba(255, 255, 255, 0.1));
+    transition: 0.5s;
+    transition-property: background, box-shadow;
+  }
+  
+  .datetime:hover{
+    background: #2E94E3;
+    box-shadow: 0 0 30px #2E94E3;
+  }
+  
+  .date{
+    font-size: 20px;
+    font-weight: 600;
+    text-align: center;
+    letter-spacing: 3px;
+  }
+  
+  .time{
+    font-size: 60px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+  }
+  
+  .time span:not(:last-child){
     position: relative;
-    display: inline-block;
-    padding: 15px 30px;
-    color: #f32121;
+    margin: 0 6px;
+    font-weight: 600;
+    text-align: center;
+    letter-spacing: 3px;
+  }
+  
+  .time span:last-child{
+    background: #2E94E3;
+    font-size: 30px;
+    font-weight: 600;
     text-transform: uppercase;
-    letter-spacing: 4px;
-    text-decoration: none;
-    font-size: 24px;
-    overflow: hidden;
-    transition: 0.2s;
-    margin: 5px;
-
-}
-
-.Buttons a:hover{
-    color: #842525;
-    background: #f32121;
-    box-shadow: 0 0 10px #f32121, 0 0 40px #f32121, 0 0 80px #f32121;
-    transition-delay: 1s;
-}
-
-.Buttons a span{
-    position: absolute;
-    display: block;
-}
-.Buttons a span:nth-child(1){
-    top: 0;
-    left: -100%;
-    width: 100%;
-    height: 2px;
-    background: linear-gradient(90deg,transparent, #f32121);
-}
-
-.Buttons a:hover span:nth-child(1){
-    left: 100%;
-    transition: 1s;
-}
-
-.Buttons a span:nth-child(3){
-    bottom: 0;
-    right: -100%;
-    width: 100%;
-    height: 2px;
-    background: linear-gradient(270deg,transparent, #f32121);
-}
-
-.Buttons a:hover span:nth-child(3){
-    right: 100%;
-    transition: 1s;
-    transition-delay: 0.5s;
-}
-
-.Buttons a span:nth-child(2){
-    top: -100%;
-    right: 0;
-    width: 2px;
-    height: 100%;
-    background: linear-gradient(180deg,transparent, #f32121);
-}
-
-.Buttons a:hover span:nth-child(2){
-    top: 100%;
-    transition: 1s;
-    transition-delay: .25s;
-}
-
-.Buttons a span:nth-child(4){
-    bottom: -100%;
-    left: 0;
-    width: 2px;
-    height: 100%;
-    background: linear-gradient(360deg,transparent, #f32121);
-}
-
-.Buttons a:hover span:nth-child(4){
-    bottom: 100%;
-    transition: 1s;
-    transition-delay: .75s;
-}
-
-
+    margin-top: 10px;
+    padding: 0 5px;
+    border-radius: 3px;
+  }
+                             
